[package]
name = "rust-quic-rpc-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
derive_more = { version = "1", features = ["from", "try_into", "display"] }
futures-buffered = "0.2.11"
futures-lite = "2.6.0"
futures-util = { version = "0.3.31"}
quic-rpc = { version = "0.20.0", features = ["quinn-transport", "macros", "test-utils"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-error = "0.1.3"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7.15"


[[example]]
name = "rpc_test"
path = "examples/rpc_test.rs"


[[example]]
name = "selects"
path = "examples/selects.rs"